--- a/style.css
+++ b/style.css
@@ -22,31 +22,29 @@
   width: 100%;
   height: 50px;
 }
-.boder{
+.boder {
   border: 2px solid transparent;
 }
-.boder:hover{
+.boder:hover {
   border: 1.5px solid white;
 }
-.add-first{
+.add-first {
   color: #cccccc;
   font-size: 0.85rem;
   margin-left: 15px;
-
 }
-.add-second{
+.add-second {
   font-size: 1rem;
   margin-left: 3px;
-
 }
-.add-icon{
+.add-icon {
   display: flex;
   align-items: center;
 }
 
 /* box-2 */
 
-.nav-search{
+.nav-search {
   display: flex;
   border-color: pink;
   width: 620px;
@@ -54,10 +52,10 @@
   border-radius: 4px;
   justify-content: space-evenly;
 }
-.nav-search:hover{
+.nav-search:hover {
   border: 2px solid #dc8e08;
 }
-.search-select{
+.search-select {
   background-color: #f3f3f3;
   width: 50px;
   text-align: center;
@@ -66,49 +64,46 @@
   font-size: 1rem;
   border: none;
 }
-.search-input{
+.search-input {
   width: 100%;
   font-size: 1.3rem;
   border: none;
-  
 }
-.search-icon{
-width: 45px;
-display: flex;
-justify-content: center;
-align-items: center;
-font-size: 1.3rem;
-background-color: #dc8e08;
-border-top-right-radius: 5px;
+.search-icon {
+  width: 45px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.3rem;
+  background-color: #dc8e08;
+  border-top-right-radius: 5px;
   border-bottom-right-radius: 5px;
   color: #0f1111;
-
 }
 
 /** box-4 **/
 
-span{
+span {
   font-size: 0.6rem;
 }
-.nav-second{
-font-size: 0.85rem;
-font-weight: 700;
+.nav-second {
+  font-size: 0.85rem;
+  font-weight: 700;
 }
 
 /** box-6 **/
 
-
-.nav-cart i{
+.nav-cart i {
   font-size: 35px;
 }
-.nav-cart{
+.nav-cart {
   font-size: 0.85rem;
   font-weight: 700;
 }
 
 /**    down nav **/
 
-.panel{
+.panel {
   height: 40px;
   background-color: #222f3d;
   display: flex;
@@ -116,24 +111,22 @@ font-weight: 700;
   justify-content: space-evenly;
   color: white;
 }
-.panel-ops p{
+.panel-ops p {
   display: inline;
   margin-left: 15px;
- 
 }
-.panel-ops{
+.panel-ops {
   width: 70%;
   font-size: 0.85;
-
 }
-.panel-deals{
+.panel-deals {
   font-size: 1rem;
   font-weight: 700;
 }
 
 /** hero section **/
 
-.hero-section{
+.hero-section {
   background-image: url("./image/hero_image.jpg");
   height: 350px;
   background-size: cover;
@@ -142,7 +135,7 @@ font-weight: 700;
   align-items: flex-end;
 }
 
-.hero-msg{
+.hero-msg {
   background-color: white;
   color: #0f1111;
   height: 40px;
@@ -152,40 +145,101 @@ font-weight: 700;
   font-size: 0.85rem;
   width: 80%;
   margin-bottom: 30px;
-
 }
-.hero-msg a{
+.hero-msg a {
   color: #007185;
 }
 
 /** shop-section **/
 
-.shop-section{
+.shop-section {
   display: flex;
   justify-content: space-evenly;
   background-color: #e2e7e6;
   flex-wrap: wrap;
 }
 
-.box{
-  
+.box {
   height: 380px;
   width: 23%;
   background-color: white;
   padding: 20px 0px 15px;
   margin-top: 15px;
 }
-.box-img{
+.box-img {
   height: 300px;
   background-size: cover;
   margin-top: 1rem;
   margin-bottom: 1rem;
 }
-.box-content{
+.box-content {
   margin-left: 1rem;
   margin-right: 1rem;
   margin-bottom: 1rem;
 }
-.box-content p{
+.box-content p {
   color: #007185;
+}
+
+/** footer **/
+footer {
+  margin-top: 15px;
+}
+
+.foot-panel1 {
+  background-color: #37475a;
+  color: white;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 0.85rem;
+}
+.foot-panel2 {
+  background-color: #222f3d;
+  color: white;
+  height: 300px;
+  display: flex;
+  justify-content: space-evenly;
+}
+ul a {
+  display: block;
+  font-size: 0.85rem;
+  margin-top: 10px;
+  color: #dddddd;
+}
+ul p {
+  font-weight: 700;
+}
+ul {
+  margin-top: 20px;
+}
+
+.foot-panel3 {
+  background-color: #222f3d;
+  color: white;
+  border-top: 1px solid white;
+  height: 70px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.logo {
+  background-image: url("./image/amazon_logo.png");
+  background-size: cover;
+  height: 50px;
+  width: 80px;
+}
+.foot-panel4 {
+  background-color: black;
+  color: white;
+  font-size: 0.8rem;
+  text-align: center;
+  height: 100px;
+}
+.pages {
+  padding-top: 20px;
+}
+.copyright {
+  margin-top: 7px;
 }
